# moctale

./: .env.example  .gitignore  Makefile  README.md  cypress.config.ts  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.github/workflows/: ci.yml
backend/: .env.example  Makefile  README.md  __init__.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  routes.py
backend/app/core/: config.py  database.py  security.py
backend/app/data/: __init__.py  pipeline.py
backend/app/model/: __init__.py  recommender.py  train.py
backend/app/schemas/: auth.py
backend/app/service/: __init__.py  activity.py  api.py  db.py  discovery.py  discovery_api.py  discovery_clients.py  playlists.py
backend/app/services/: __init__.py
backend/data/: sample_interactions.jsonl
backend/models/latest/: metadata.json  model.keras
backend/tests/: test_api.py  test_auth.py  test_discovery.py  test_discovery_service.py  test_pipeline.py  test_playlists.py
config/: README.md
cypress/e2e/: happyPath.cy.ts
frontend/: .env.example  .eslintrc.cjs  README.md  env.d.ts  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  setupTests.ts
frontend/src/components/: README.md
frontend/src/pages/: AuthPage.tsx  (+5 more)
src/: App.tsx  index.css  main.tsx  types.ts
src/components/: AuthGuard.tsx  DiscoverySection.tsx  Layout.tsx  MediaCard.tsx  PlaylistManager.tsx  PublicOnlyGuard.tsx  RecommendationGrid.tsx  ShareControls.tsx
src/context/: AuthContext.test.tsx  AuthContext.tsx  PlaylistContext.tsx
src/data/: mockData.ts
src/hooks/: useDiscoveryFeed.ts  usePlaylists.ts
src/layouts/: AppLayout.tsx
src/pages/: Dashboard.tsx  Login.test.tsx  Login.tsx  NotFoundPage.tsx  Profile.tsx  PublicPlaylist.tsx  Signup.tsx
src/services/: api.ts  auth.test.ts  auth.ts
src/store/: appStore.ts
src/utils/: format.ts
(+10 files in other folders)
