[tool.poetry]
name = "backend"
version = "0.1.0"
description = "FastAPI service for the full-stack starter project"
authors = ["Soundwave Studio Contributors <dev@soundwave.local>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.110.0"
motor = "3.3.2"
pydantic = "2.7.1"
python-jose = { version = "3.3.0", extras = ["cryptography"] }
passlib = { version = "1.7.4", extras = ["bcrypt"] }
uvicorn = { version = "0.29.0", extras = ["standard"] }
requests = "2.31.0"
pydantic-settings = "2.2.1"

[tool.poetry.group.dev.dependencies]
black = "23.12.1"
ruff = "0.3.5"
pytest = "8.1.1"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py311"]
line-length = 88

[tool.ruff]
line-length = 88
src = ["app"]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
  "N",
  "ASYNC",
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
profile = "black"
