[tool.poetry]
name = "starter-backend"
version = "0.1.0"
description = "FastAPI starter service"
authors = ["Your Team <dev@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "0.110.0"
uvicorn = {version = "0.29.0", extras = ["standard"]}
motor = "3.3.2"
pydantic = "2.6.4"
pydantic-settings = "2.2.1"
python-jose = {version = "3.3.0", extras = ["cryptography"]}
passlib = {version = "1.7.4", extras = ["bcrypt"]}
requests = "2.31.0"

[tool.poetry.group.dev.dependencies]
black = "24.3.0"
ruff = "0.3.7"
pytest = "8.1.1"
httpx = "0.27.0"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
lint.select = [
  "E","F","W","I",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]
